# Queens

./: .gitignore  FullRun.py  Makefile  README.md  best_sweep.txt  board_manipulation.py  data_loader.py  problem_puzzles.txt  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
app/: gradio_app.py
code/: FullRun.py  ablation_study.py  app.py  bm_model.py  bm_train.py  bm_vectorized_eval.py  board_manipulation.py  compare_models.py  config.py  data_loader.py  deprecated_solver.py  evaluation_analysis.py  evaluation_util.py  experiment_tracker.py  experiment_tracker_fixed.py  full_run.py  helper.py  hyperparameter_tuning.py  improved_solver.py  model.py  processing_util.py  solver.py  train.py  train_all_models.py
code/sweep/: objective.py  run_sweep.py  vectorized_eval.py
data/: .gitkeep
scripts/: ablation.py  sweep.py  sweep_objective.py  train.py  validate_structure.py
src/queens_solver/: __init__.py  config.py
src/queens_solver/data/: __init__.py  dataset.py  preprocessing.py  utils.py
src/queens_solver/evaluation/: __init__.py  benchmark_eval.py  evaluator.py  solver.py  utils.py
src/queens_solver/models/: __init__.py  models.py
src/queens_solver/training/: __init__.py  benchmark_trainer.py  tracker.py  trainer.py
